# deduce

./: .gitignore  .mcp.json  AVLTree.pf  AVLTreeNot.graffle  AVLTrees.graffle  BalancedBST.md  Base.pf  Base.thm  Binary.pf  Binary.thm  BinarySearchTree.md  BinarySearchTree1.graffle  BinaryTree.md  BinaryTree05.graffle  BinaryTree06.graffle  BinaryTree07.graffle  BinaryTreeProof.md  CLAUDE.md  Deduce.lark  FilterAll.md  FunctionalProgramming.md  FunctionalProgramming.thm  Heap.pf  Heap.py  Heap2.pf  InsertionSort.md  Iter4.graffle  LinearSearch.md  LinkedLists.md  List.pf  List.thm  ListTests.pf  ListTests.thm  Log.pf  Log.thm  Makefile  Maps.pf  Maps.thm  MergeSort.md  MultiSet.pf  (+67 more)
.claude/: settings.json
.claude/hooks/: pr-subtask-reminder.sh
.github/workflows/: auto_close_parent.yml  clear_in_progress.yml  static.yml  test_deduce.yml
abstract_syntax/: __init__.py  core.py  declarations.py  env.py  literals.py  ops.py  proofs.py  rewrite.py  terms.py  theorems.py
api/: api.py  build.sh  requirements.txt
autograder_docker/: Dockerfile
chart-parser/: grammar_interpreter.py
compiler/: __init__.py  closure.py  compile_prelude.py  emit_c.py  ir.py  lower.py  prune.py
compiler/runtime/: deduce.c  deduce.h
doc/: CheatSheet.md  Deduce.lark  FunctionalProgramming.md  GettingStarted.md  Makefile  ProofIntro.md  Reference.md  StandardLib.md  convert.py  entangled.toml  lib_generate.py
doc/stdlib/: Base.pf.html  Binary.pf.html  ImportTests.pf.html  Int.pf.html  IntTests.pf.html  List.pf.html  ListTests.pf.html  Log.pf.html  Maps.pf.html  MultiSet.pf.html  Nat.pf.html  NatTests.pf.html  Option.pf.html  Pair.pf.html  Set.pf.html  stdlib.css  sums.pf.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  bug-report.md  code-contribution.md  compile-plan.md  emacs-plan.md  enhancements.md  hole-fill-plan.md  imperative-verification-plan.md  lsp-plan.md  separate-compile-plan.md  uint-view-recursion-plan.md
docs/knowledge-base/: abstract-syntax.md  autograder-dockerfile.md  emacs-lsp-protocol.md  github-issue-automation-sharks.md  how-it-works.md  site-maintenance.md  what-to-update.md
editor/emacs/: README.md  deduce-dap.el  deduce-fill-hole.el  deduce-lsp.el  deduce-mode.el
editor/vscode/: README.md  extension.js  language-configuration.json  launch.json.sample  package-lock.json  package.json
ex/: Max.pf  MergeSort.pf  Search.pf  Search2.pf  Sort.pf  Sum.pf
examples/: all_any.pf  concat.pf  count.pf  count_if.pf  even_double.pf  fast_factorial.pf  fast_reverse.pf  fast_reverse_spec.pf  filter.pf  foldr_foldl.pf  gauss_sum.pf  map_as_foldr.pf  maximum.pf  maximum_spec.pf  maximum_specs_equivalent.pf  partition.pf  partition_spec.pf  product.pf  replicate.pf  reverse_involutive.pf  sum_correct.pf  sum_spec.pf  tails.pf  take_drop_correct.pf  take_while.pf  tree_leaf_count.pf  tree_mirror.pf  zip_unzip.pf
gh-pages/: 404.html  index.html  maintenance.md  requirements.txt  sandbox.html
gh-pages/css/: stdlib-dev.css  stdlib.css  style-dev.css  style.css
gh-pages/deduce-code/: home_example1.thm  home_example2.pf  home_example2.thm  home_example3.pf  home_example3.thm  programming_ImportNat.pf  programming_L12.pf  programming_List.pf  programming_NL12.pf  programming_Nat.pf  programming_NatList.pf  programming_Pair.pf  programming_all_elements.pf  programming_app.pf  programming_apply_length.pf  programming_apply_length_empty.pf  programming_area.pf  programming_bad_area.pf  programming_broken_front.pf  programming_front.pf  programming_head.pf  programming_lenNatList.pf  programming_length.pf  programming_print7.pf  programming_print_front.pf  programming_test_dot.pf  programming_test_last.pf  programming_test_remove_if.pf  programming_test_sum.pf  programming_zip_example.pf  proof_alt_max.pf  proof_append_node_1_node_2.pf  proof_append_node_x_node_y.pf  proof_contra_false.pf  proof_equal_less_trans.pf  proof_false_any.pf  proof_intro_addition_of_evens.pf  proof_intro_dichotomy.pf  proof_intro_less_irreflexive.pf  proof_intro_less_not_equal.pf  (+81 more)
gh-pages/js/: code.js  codeUtils.js  sandbox.js  script.js
gh-pages/pages/: README.md  cheat-sheet.html  deduce-programming.html  deduce-proofs.html  getting-started.html  reference.html  sandbox.html  syntax.html
gh_pages/: README.md  index.html  requirements.txt  sandbox.html
gh_pages/css/: stdlib.css  style-dev.css  style.css
gh_pages/deduce-code/: getting-started_hello_starting_example.pf  home_example1.pf  home_example2.pf  home_example3.pf  index_home_example1.pf  index_home_example2.pf  programming_L12.pf  (+76 more)
latex/: FunProg.pf  fun-prog.tex  garamond.sty  ggm.map  ggmm8a.afm  ggmm8t.vf  ggmmi8a.afm  ggmmi8t.vf  ggmr8a.afm  ggmr8t.vf  ggmrc8t.vf  ggmri8a.afm  ggmri8t.vf  proof-intro.tex  t1ggm.fd  ts1ggm.fd
lectures/: Programming.pf  Proof.pf  Proof.thm  Proof2.pf
lib/: Base.pf  Base.thm  BigO.pf  Binary.pf  Binary.thm  Int.pf  Int.thm  IntAbs.pf  IntAddSub.pf  IntDefs.pf  IntDiv.pf  IntDivides.pf  IntEvenOdd.pf  IntLess.pf  IntMod.pf  IntMult.pf  IntPowLog.pf  IntSum.pf  List.pf  List.thm  ListTests.pf  ListTests.thm  Log.pf  Log.thm  Maps.pf  Maps.thm  MultiSet.pf  MultiSet.thm  Nat.pf  Nat.thm  NatAdd.pf  NatDefs.pf  NatDiv.pf  NatEvenOdd.pf  NatLess.pf  NatMonus.pf  NatMult.pf  NatPowLog.pf  NatSum.pf  NatTests.thm  (+21 more)
live_code_vercel_api/: api.py  install.sh  requirements.txt  setup.md
lsp/: benchmark.py  dap_server.py  debugger.py  library.py  lsp_server.py  mcp_server.py  query.py
test/: all1.pf  all2.pf  all3.pf  all4.pf  bintree.pf  compile-allowlist.txt  conditional1.pf  fun1.pf  generic1.pf  induction1.pf  inst1.pf  inst2.pf  mark1.pf  mark2.pf  mark3.pf  not_equal.pf  overload1.pf  overload2.pf  overload4.pf  overload6.pf  rec1.pf  some1.pf  some2.pf  suffices1.pf  suffices_def.pf  suffices_rewrite.pf  switch_term_error.pf  theorem_and.pf  theorem_and2.pf  theorem_and3.pf  theorem_and4.pf  theorem_and5.pf  theorem_false1.pf  theorem_false2.pf  theorem_implies.pf  theorem_implies2.pf  theorem_implies3.pf  theorem_implies4.pf  theorem_implies5.pf  theorem_implies6.pf  (+6 more)
tools/: test_runner_inproc.py
(+1144 files in other folders)
