[project]
name = "deduce"
version = "0.0.0"
description = "Proof checker and small functional language for teaching logic"
# The code uses Python 3.12 f-string syntax (PEP 701: quote reuse and
# backslash escapes inside f-strings), so 3.12 is the real floor; CI and
# the Makefile use 3.13.
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "lark==1.2.2",
]

[project.urls]
Homepage = "https://github.com/jsiek/deduce"
Documentation = "https://jsiek.github.io/deduce/"

[tool.ruff]
target-version = "py313"
exclude = [
    "__pycache__",
    "tmp",
    "lark",
    "editor",
    "live_code_vercel_api",
    "autograder_docker",
    "gh_pages/pages",
    "gh_pages/deduce-code",
]

[tool.ruff.lint]
# Pyflakes rules enabled incrementally as the codebase is cleaned up
# (see issue #481).
select = ["F401", "F403", "F405", "F541", "F601", "F811", "F821", "F841"]

[tool.mypy]
# Starter config (#479) + first tightening pass toward --strict. The
# proof-checker core (~11k LOC) is largely untyped, so the heavyweight
# --strict flags (--check-untyped-defs, --disallow-untyped-defs,
# --disallow-untyped-calls, --disallow-any-generics, --warn-return-any)
# still produce hundreds to thousands of errors and remain off
# globally; they are enabled per-module via [[tool.mypy.overrides]]
# below as individual modules are cleaned up.
#
# The cheap --strict-equivalent flags are on globally: every flag in
# the `[tool.mypy]` block below is one of the bits --strict turns on.
#
# The `exclude` list below skips paths that would otherwise produce
# module-name collisions or live outside the source tree:
#   - test/         duplicate-module name (test/claude_fill_hole vs
#                   tools/claude_fill_hole); pytest test files can be
#                   wired in once they live under unique package names.
#   - test-deduce.py the hyphen makes it an invalid Python module name,
#                   so [[tool.mypy.overrides]] cannot target it; revisit
#                   if/when it is renamed.
#   - tmp/, lark/, editor/, live_code_vercel_api/, autograder_docker/,
#     gh_pages/    match the ruff `exclude` list above.
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_subclassing_any = true
# disallow_untyped_decorators is intentionally NOT enabled globally:
# lsp/lsp_server.py and lsp/mcp_server.py use `@server.feature(...)`
# / `@mcp.tool(...)` from `pygls` and `mcp`, neither of which is
# installed in CI (they're optional and only needed when running the
# LSP/MCP servers). Under `ignore_missing_imports = true` those
# packages resolve to Any, which makes every decorator from them
# "untyped" and trips the flag. The flag is set per-module in the
# strict overrides below so the protection still applies to modules
# whose decorators are real.
no_implicit_reexport = true
exclude = [
    '^test/',
    '^test-deduce\.py$',
    '^tmp/',
    '^lark/',
    '^editor/',
    '^live_code_vercel_api/',
    '^autograder_docker/',
    '^gh_pages/',
]

# Per-module strict: modules that pass --strict get listed here so the
# heavyweight bits (check_untyped_defs, disallow_untyped_defs,
# disallow_untyped_calls, disallow_any_generics, warn_return_any,
# disallow_incomplete_defs) are enforced going forward and any
# regression is caught in CI. Add a module here once `mypy --strict
# <module> --follow-imports=silent` is clean.
#
# The order of expected wins from the remaining error counts (mypy
# 2.1.0, --python-version 3.12, against this config — measured
# 2026-05-13):
#
#   lsp/benchmark.py                            (4 errors; transitive
#                                                untyped calls into
#                                                flags.py / lsp.library
#                                                — touching those
#                                                ripples wider)
#   compiler/lower.py                           (8; missing annotations
#                                                on helpers and lower_*
#                                                methods)
#   tools/claude_fill_hole/__main__.py          (13)
#   tools/claude_fill_hole/anthropic_backend.py (13)
#   tools/claude_fill_hole/openai_backend.py    (30)
#   lsp/mcp_server.py                           (30)
#   style.py                                    (31)
#   error.py                                    (65)
#   lsp/lsp_server.py                           (74)
#   lsp/query.py                                (132)
#   parser.py                                   (310)
#   abstract_syntax.py                          (1192)
#   proof_checker.py                            (1337)
#   rec_desc_parser.py                          (1348)
#
# NOTE: mypy does not honor `strict = true` inside per-module overrides
# (the meta-flag is global-only). The bits it would turn on are set
# individually below — the full --strict expansion minus the ones
# already enabled globally above.
[[tool.mypy.overrides]]
module = [
    "deduce",
    "error",
    "compiler.closure",
    "compiler.compile_prelude",
    "compiler.emit_c",
    "compiler.ir",
    "compiler.lower",
    "compiler.prune",
    "edit_distance",
    "flags",
    "style",
    "lsp.benchmark",
    "lsp.debugger",
    "lsp.dap_server",
    "lsp.library",
    "claude_fill_hole.__main__",
    "claude_fill_hole.agent",
    "claude_fill_hole.anthropic_backend",
    "claude_fill_hole.openai_backend",
    "claude_fill_hole.prompt",
    "claude_fill_hole.schema",
    "claude_fill_hole.validator",
    "claude_fill_hole.examples.run_benchmark",
]
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true

# lsp/mcp_server.py uses `@mcp.tool()` from the `mcp` package, which
# is an optional dev-only dep that the CI workflow does not install
# (same pattern as `pygls` for `lsp/lsp_server.py` — see comment on
# global `disallow_untyped_decorators` above). Under
# `ignore_missing_imports = true`, `mcp.tool` resolves to `Any` on
# CI, which makes every decorated function "untyped" and trips
# disallow_untyped_decorators. Listed in its own override block with
# the strict bits but without the decorator check, since mypy refuses
# to merge two overrides setting conflicting values for the same key.
[[tool.mypy.overrides]]
module = ["lsp.mcp_server"]
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true

# abstract_syntax.py is too big for a one-shot --strict adoption
# (~1192 errors against full --strict — see #506). Ratchet the
# heavyweight bits on one flag at a time, cheapest first; once they
# are all on, move the module into the unified strict block above.
# Order so far (per the table in #506):
#   warn_return_any        (4 errors, fixed here)
#   disallow_any_generics  (6 errors, fixed here)
#   disallow_untyped_calls (16 errors, fixed here)
#   check_untyped_defs     (77)
#   disallow_untyped_defs  (493)
[[tool.mypy.overrides]]
module = ["abstract_syntax"]
disallow_any_generics = true
disallow_untyped_calls = true
warn_return_any = true

# parser.py is also being ratcheted in small strictness slices for #506.
# These cheap flags are clean; later passes should add check_untyped_defs
# and disallow_untyped_defs once their larger error sets are fixed.
[[tool.mypy.overrides]]
module = ["parser"]
disallow_any_generics = true
disallow_untyped_calls = true
warn_return_any = true
