[project]
name = "deduce"
version = "0.0.0"
description = "Proof checker and small functional language for teaching logic"
# The code uses Python 3.12 f-string syntax (PEP 701: quote reuse and
# backslash escapes inside f-strings), so 3.12 is the real floor; CI and
# the Makefile use 3.13.
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "lark==1.2.2",
]

[project.urls]
Homepage = "https://github.com/jsiek/deduce"
Documentation = "https://jsiek.github.io/deduce/"

[tool.ruff]
target-version = "py313"
exclude = [
    "__pycache__",
    "tmp",
    "lark",
    "editor",
    "live_code_vercel_api",
    "autograder_docker",
    ".claude",
    "gh_pages/pages",
    "gh_pages/deduce-code",
]

[tool.ruff.lint]
# Pyflakes rules enabled incrementally as the codebase is cleaned up
# (see issue #481).
select = ["F401", "F403", "F405", "F541", "F601", "F811", "F821", "F841"]

[tool.ruff.lint.per-file-ignores]
# The split abstract_syntax package preserves the old monolithic module's
# late-bound helper lookups during migration. The compatibility facade injects
# sibling globals after import, which Pyflakes cannot infer statically.
"abstract_syntax/*.py" = ["F401", "F403", "F405", "F811", "F821"]
# The checker split keeps a shared namespace while proof_checker.py remains a
# compatibility facade; the facade links the extracted modules after import.
"checker_*.py" = ["F401", "F403", "F405"]

[tool.mypy]
# Starter config (#479) + first tightening pass toward --strict. The
# proof-checker core (~11k LOC) is largely untyped, so the heavyweight
# --strict flags (--check-untyped-defs, --disallow-untyped-defs,
# --disallow-untyped-calls, --disallow-any-generics, --warn-return-any)
# still produce hundreds to thousands of errors and remain off
# globally; they are enabled per-module via [[tool.mypy.overrides]]
# below as individual modules are cleaned up.
#
# The cheap --strict-equivalent flags are on globally: every flag in
# the `[tool.mypy]` block below is one of the bits --strict turns on.
#
# The `exclude` list below skips paths that would otherwise produce
# module-name collisions or live outside the source tree:
#   - test/         duplicate-module name (test/claude_fill_hole vs
#                   tools/claude_fill_hole); pytest test files can be
#                   wired in once they live under unique package names.
#   - test-deduce.py the hyphen makes it an invalid Python module name,
#                   so [[tool.mypy.overrides]] cannot target it; revisit
#                   if/when it is renamed.
#   - tmp/, lark/, editor/, live_code_vercel_api/, autograder_docker/,
#     .claude/, gh_pages/    match the ruff `exclude` list above.
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_subclassing_any = true
# disallow_untyped_decorators is enabled globally now that the CI
# workflow installs requirements-lsp.txt (`pygls` and `mcp`). Both
# ship inline type annotations, so the LSP/MCP decorators resolve to
# real types in the normal `mypy .` pass. The local `--no-site-packages`
# pass intentionally hides those packages; the LSP/MCP module override
# below suppresses only that decorator-boundary noise.
disallow_untyped_decorators = true
no_implicit_reexport = true
exclude = [
    '^test/',
    '^test-deduce\\.py$',
    '^tmp/',
    '^lark/',
    '^editor/',
    '^live_code_vercel_api/',
    '^autograder_docker/',
    '^\\.claude/',
    '^gh_pages/',
]

# Per-module strict: modules that pass --strict get listed here so the
# heavyweight bits (check_untyped_defs, disallow_untyped_defs,
# disallow_untyped_calls, disallow_any_generics, warn_return_any,
# disallow_incomplete_defs) are enforced going forward and any
# regression is caught in CI. Add a module here once `mypy --strict
# <module> --follow-imports=silent` is clean.
#
# rec_desc_parser.py is the last large module that still fails strict
# (see #681); once it lands, `strict = true` can move into the global
# `[tool.mypy]` block and this override list can be deleted.
#
# NOTE: mypy does not honor `strict = true` inside per-module overrides
# (the meta-flag is global-only). The bits it would turn on are set
# individually below — the full --strict expansion minus the ones
# already enabled globally above.
[[tool.mypy.overrides]]
module = [
    "deduce",
    "error",
    "parser",
    "abstract_syntax",
    "checker_cache",
    "checker_common",
    "checker_induction",
    "checker_logic",
    "checker_pipeline",
    "checker_predicates",
    "checker_proofs",
    "checker_types",
    "compiler.closure",
    "compiler.compile_prelude",
    "compiler.emit_c",
    "compiler.ir",
    "compiler.lower",
    "compiler.prune",
    "edit_distance",
    "flags",
    "style",
    "lsp.benchmark",
    "lsp.debugger",
    "lsp.dap_server",
    "lsp.library",
    "lsp.lsp_server",
    "lsp.mcp_server",
    "lsp.query",
    "claude_fill_hole.__main__",
    "claude_fill_hole.agent",
    "claude_fill_hole.anthropic_backend",
    "claude_fill_hole.openai_backend",
    "claude_fill_hole.prompt",
    "claude_fill_hole.schema",
    "claude_fill_hole.validator",
    "claude_fill_hole.examples.run_benchmark",
]
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true

# Keep the no-dependencies mypy pass useful without weakening the rest
# of strict checking for the LSP/MCP adapters. When `--no-site-packages`
# hides pygls/mcp, their decorators become Any and otherwise produce a
# wall of untyped-decorator errors.
[[tool.mypy.overrides]]
module = ["lsp.lsp_server", "lsp.mcp_server"]
disable_error_code = ["untyped-decorator"]

# Submodules of abstract_syntax re-export sibling names through the
# compatibility facade in abstract_syntax/__init__.py, which conflicts
# with the global `no_implicit_reexport = true`. Allow implicit
# re-export for the submodules only.
[[tool.mypy.overrides]]
module = ["abstract_syntax.*"]
implicit_reexport = true
