[project]
name = "deduce"
version = "0.0.0"
description = "Proof checker and small functional language for teaching logic"
# The code uses Python 3.12 f-string syntax (PEP 701: quote reuse and
# backslash escapes inside f-strings), so 3.12 is the real floor; CI and
# the Makefile use 3.13.
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "lark==1.2.2",
]

[project.urls]
Homepage = "https://github.com/jsiek/deduce"
Documentation = "https://jsiek.github.io/deduce/"

[tool.ruff]
target-version = "py313"
exclude = [
    "__pycache__",
    "tmp",
    "lark",
    "editor",
    "live_code_vercel_api",
    "autograder_docker",
    ".claude",
    "gh_pages/pages",
    "gh_pages/deduce-code",
]

[tool.ruff.lint]
# Pyflakes rules enabled incrementally as the codebase is cleaned up
# (see issue #481).
select = ["F401", "F403", "F405", "F541", "F601", "F811", "F821", "F841"]

[tool.ruff.lint.per-file-ignores]
# The split abstract_syntax package preserves the old monolithic module's
# late-bound helper lookups during migration. The compatibility facade injects
# sibling globals after import, which Pyflakes cannot infer statically.
"abstract_syntax/*.py" = ["F401", "F403", "F405", "F811", "F821"]
# The checker split keeps a shared namespace while proof_checker.py remains a
# compatibility facade; the facade links the extracted modules after import.
"checker_*.py" = ["F401", "F403", "F405"]

[tool.mypy]
# The whole source tree now passes `mypy --strict` (#681), so `strict`
# is enabled globally rather than ratcheted per module. `warn_unreachable`
# and `ignore_missing_imports` are not part of `--strict`, so they stay
# explicit.
#
# The `exclude` list below skips paths that would otherwise produce
# module-name collisions or live outside the source tree:
#   - test/         duplicate-module name (test/claude_fill_hole vs
#                   tools/claude_fill_hole); pytest test files can be
#                   wired in once they live under unique package names.
#   - test-deduce.py the hyphen makes it an invalid Python module name,
#                   so [[tool.mypy.overrides]] cannot target it; revisit
#                   if/when it is renamed.
#   - tmp/, lark/, editor/, live_code_vercel_api/, autograder_docker/,
#     .claude/, gh_pages/    match the ruff `exclude` list above.
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unreachable = true
exclude = [
    '^test/',
    '^test-deduce\\.py$',
    '^tmp/',
    '^lark/',
    '^editor/',
    '^live_code_vercel_api/',
    '^autograder_docker/',
    '^\\.claude/',
    '^gh_pages/',
]

# Keep the no-dependencies mypy pass useful without weakening the rest
# of strict checking for the LSP/MCP adapters. When `--no-site-packages`
# hides pygls/mcp, their decorators become Any and otherwise produce a
# wall of untyped-decorator errors.
[[tool.mypy.overrides]]
module = ["lsp.lsp_server", "lsp.mcp_server"]
disable_error_code = ["untyped-decorator"]

# Submodules of abstract_syntax re-export sibling names through the
# compatibility facade in abstract_syntax/__init__.py, which conflicts
# with the global `no_implicit_reexport = true`. Allow implicit
# re-export for the submodules only.
[[tool.mypy.overrides]]
module = ["abstract_syntax.*"]
implicit_reexport = true

# gh_pages/ holds documentation-build tooling that is out of scope for
# the type checker (it matches the `exclude` list above and #681). The
# `exclude` regex only stops directory discovery, not import-following:
# test-deduce.py imports `gh_pages.scripts.convert`, which would
# otherwise pull the package into the build graph under global strict.
# Skip following imports into it so it stays genuinely unchecked.
[[tool.mypy.overrides]]
module = ["gh_pages.*"]
follow_imports = "skip"
